--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "expo": "~54.0.13",
+    "expo-background-fetch": "~14.0.7",
     "expo-constants": "~18.0.9",
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
@@ -35,16 +36,20 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
+    "expo-task-manager": "~14.0.8",
     "expo-web-browser": "~15.0.8",
     "lodash": "^4.17.21",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-emoji": "^1.8.0",
+    "react-native-event-source": "^1.1.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-sse": "^1.2.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1"
   },
